# ps1-renderer

./: .gitmodules  CMakeLists.txt  README.md  build.sh  run-server.sh  run.sh
.cache/clangd/index/: Metal_Blit.h.81B44945B06743CC.idx  SDL.c.22B30E87F0523053.idx  SDL.h.5F1BA6438C020061.idx  SDL_RLEaccel.c.267660EA6671A249.idx  SDL_RLEaccel_c.h.95F849158704B29D.idx  SDL_assert.c.CFFD1BE967AC93B1.idx  SDL_assert.h.C5C3BB3ECAC6BB7A.idx  SDL_assert_c.h.AEB9F6A3629B7865.idx  SDL_asyncio.c.C1BAB7FC43A79B6A.idx  SDL_asyncio.h.9B9B21FF7F881094.idx  SDL_asyncio_c.h.E1DF6DD8EB5B9A13.idx  SDL_asyncio_generic.c.3627F1A2B29A535E.idx  SDL_atomic.c.A8551DB19BAD6E02.idx  SDL_atomic.h.891622F0F97CB041.idx  SDL_audio.c.041EE4E060606229.idx  SDL_audio.h.58A37359F0A97862.idx  SDL_audio_c.h.818FA8780CC50BAB.idx  SDL_audio_channel_converters.h.C9CAD8746CD617AF.idx  SDL_audiocvt.c.3B86EFA7808C25E5.idx  SDL_audiodev.c.65D31C81B00CEEA1.idx  SDL_audioqueue.c.14F3952A2740AEB5.idx  SDL_audioqueue.h.DCE3D079AF827E3A.idx  SDL_audioresample.c.A9D33A0EC1BE4DC3.idx  SDL_audioresample.h.F1B7167A7D8ECF9D.idx  SDL_audiotypecvt.c.EF0E13FC56C80552.idx  SDL_begin_code.h.D9F9FDE6B42EC4A2.idx  SDL_bits.h.0ED1A99569B0B7BD.idx  SDL_blendfillrect.c.9FB0811391FB6687.idx  SDL_blendfillrect.h.13D946BB7A3657D1.idx  SDL_blendline.c.20125BC042274D3F.idx  SDL_blendline.h.002829558D38AA9B.idx  SDL_blendmode.h.59899BDEAE860679.idx  SDL_blendpoint.c.FBDF47F45693EEB3.idx  SDL_blendpoint.h.306382B2BD287568.idx  SDL_blit.c.B65155374C4B47D1.idx  SDL_blit.h.F4D58AC571F4516F.idx  SDL_blit_0.c.CEDCEFA4EC442533.idx  SDL_blit_1.c.A98953D5C653BD33.idx  SDL_blit_A.c.5C6A8923FFF81E57.idx  SDL_blit_N.c.A5D295152CE1BF82.idx  (+1110 more)
assets/school/: license.txt  scene.gltf
shaders/: shader.frag  shader.vert
shaders/text/: text.frag  text.vert
src/: basic-types.h  box.c  box.h  camera.c  camera.h  cube.c  cube.h  file.c  file.h  game.c  game.h  input.c  input.h  main.c  mesh.c  mesh.h  model.c  model.h  node.c  node.h  player.c  player.h  quad.c  quad.h  shader.c  shader.h  text.c  text.h  texture.c  texture.h  vertex.h  window.c  window.h
src/gfx/: mesh.c  mesh.h  model.c  model.h  node.c  node.h  shader.c  window.c  window.h
src/network/: packet.h
src/network/client/: client.c  client.h
src/network/server/: server.c  server.h
src/utils/: file.c
